HEAD
	+ Fixed incorrect URLs with double ports in redirects
3.4.2
	+ Fix typo in general widget
	+ Updated nginx to server static files directly always so apache shouldn't
	  ever get this kind of requests
	+ Support for redirection when loading URL in existent dialog
	+ Added webadmin port tag to haproxy configuration file
3.4.1
	+ Fix dashboard UI freeze when widgets were being updated
	+ Add audit to post save when enabling logs
	+ Fix enabled save changes button after installing packages
	+ Changed CGI base to show correctly referer errors and
	  generating response errors
	+ Override daemons does not fail if a daemon is already stopped
	+ Added missing use to row.mas
	+ More tolerant referer validation so we can access to submodels
	  with an URL
	+ Restored reconnect option for mysql connections
	+ EBox::WebAdmin::addNginxServer does not longer raises exception
	  if file not yet exists
	+ create-db script can repair login problems
	+ Migrate previous configuration from 3.3 when upgrading
	+ Admin password change handled by AuthPAM
	+ Fix version available check in dashboard when file does not exist
	+ Do not show success note if there is no note
	+ Fix data in use behaviour on edition
	+ Fixed revert of changes in redisvi
	+ Better input validation in EBox::Conf::Redis::import_dir_from_file
	+ Give support to data in use exception for in-place booleans
	+ Fix warnOnChangeId framework
	+ Give real no support to /media in Disk Usage even when modules
	  use it
	+ Added release upgrade code (disabled until 3.5)
	+ Hide passwords on admin user model on error and debug on
	+ Set proper version for bugreport issues
3.4
	+ Do not launch exceptions on EBox::MyDBEngine DESTROY
	+ Ask for trace object to non-handled EBox::Exceptions::Base
	  exceptions in the UnhandledError middleware. This will gives us
	  useful stack traces.
	+ When requesting from type a non-existing value use acquirer
	  if it is a volatile type